<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.udacity.maar.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="#dfeaf1">

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/nanoDegree_apps"
        android:textSize="@dimen/my_nano_apps"
        android:id="@+id/textView"
        android:layout_centerHorizontal="true"
        android:gravity="center|center_horizontal|center_vertical"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer"
        android:textColor="@color/text_white"
        android:id="@+id/button"
        android:background="@color/udacity_orange"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:gravity="center|center_horizontal|center_vertical"
        android:layout_marginTop="33dp"
        android:onClick="buttonClick"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/scores_app"
        android:textColor="@color/text_white"
        android:background="@color/udacity_orange"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_marginTop="10dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:onClick="buttonClick"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:textColor="@color/text_white"
        android:background="@color/udacity_orange"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:onClick="buttonClick"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:textColor="@color/text_white"
        android:background="@color/udacity_orange"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:onClick="buttonClick"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/bacon_reader"
        android:textColor="@color/text_white"
        android:background="@color/udacity_orange"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:onClick="buttonClick"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/capstone_my_app"
        android:textColor="@color/text_white"
        android:background="@color/my_app"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:onClick="buttonClick"/>
</RelativeLayout>
